# ppyNotion

./: .gitignore  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish-on-test.yml  python-publish-to-main-pypi.yml
class_diagram/: classes.dot  packages.dot
code/: Annotation.py  Database.py  User.py  __init__.py  annotation.py  client.py  database.py  equation.py  link.py  page.py  user.py
code/Interface/: INotionObject.py  i_notion_object.py
code/type/: __init__.py
code/utils/: date_formatter.py  getter_setter_gen.py  user.py
ppyNotion/: __init__.py  annotation.py  annotation_test.py  base_text.py  checkbox.py  choice.py  client.py  comment.py  database.py  date.py  emoji.py  equation.py  link.py  mention.py  notion_client.py  parent.py  property.py  richtext.py  text.py  user.py
ppyNotion/constants/: api_constants.py
ppyNotion/type/: __init__.py
ppyNotion/utils/: date_formatter.py  getter_setter_gen.py
scripts/: format.sh
test/: annotation_test.py  base_text_test.py  checkbox_test.py  choice_test.py  client_test.py  date_test.py  emoji_test.py  equation_test.py  link_test.py  parent_test.py  property_test.py  richtext_test.py  test_Client.py  text_test.py  user_test.py
