[project]
name = "ppynotion"
version = "0.1.0"
description = "Connect to your Notion database with ease"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jirayuwat B.", email = "jirayuwat.dev@gmail.com"}
]
dependencies = [
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
include = ["ppyNotion*"]
exclude = ["test*", "class_diagram*"]

[project.urls]
Repository = "https://github.com/jirayuwat12/ppyNotion"
Issues = "https://github.com/jirayuwat12/ppyNotion/issues"
Changelog = "https://github.com/jirayuwat12/ppyNotion/blob/master/CHANGELOG.md"
